--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=prism
+spring.datasource.url= jdbc:postgresql://localhost:5432/Prism
+spring.datasource.username=postgres
+spring.datasource.password=5022
+#spring.jpa.generate-ddl=true
+spring.jpa.open-in-view=true
