--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-; spring.jpa.generate-ddl=true
+#spring.jpa.generate-ddl=true
 spring.datasource.url= jdbc:postgresql://localhost:5432/Prism
 spring.datasource.username=postgres
 spring.datasource.password=5022
 spring.jpa.open-in-view=true
-
 spring.session.store-type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
