--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 #spring.jpa.generate-ddl=true
-spring.datasource.url= jdbc:postgresql://localhost:5432/Prism
+server.port=8080
+springdoc.swagger-ui.path=/prism/v1/api-ui
+springdoc.api-docs.path=/prism/v1/api-doc
+spring.datasource.url=jdbc:postgresql://localhost:5432/Prism
 spring.datasource.username=postgres
 spring.datasource.password=5022
 spring.jpa.open-in-view=true
