Fix auth validation
Убрана возможность регистрироваться без валидации

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #spring.jpa.generate-ddl=true
 server.port=8080
-springdoc.swagger-ui.path=/prism/v1/api-ui
-springdoc.api-docs.path=/prism/v1/api-doc
+server.servlet.context-path=/prism/v1
+springdoc.swagger-ui.path=/api-ui
+springdoc.api-docs.path=/api-doc
 spring.datasource.url=jdbc:postgresql://localhost:5432/Prism
 spring.datasource.username=postgres
 spring.datasource.password=5022
