--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,13 +1,20 @@
 #spring.jpa.generate-ddl=true
-server.port=8080
+server.port=${SERVER_PORT}
 server.servlet.context-path=/prism/v1
 springdoc.swagger-ui.path=/api-ui
 springdoc.api-docs.path=/api-doc
-spring.datasource.url=jdbc:postgresql://localhost:5432/Prism
-spring.datasource.username=postgres
-spring.datasource.password=5022
-spring.jpa.open-in-view=true
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_LOGIN}
+spring.datasource.password=${DB_PASSWORD}
 spring.session.store-type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=${REDIS_PORT}
+server.servlet.session.timeout=100d
+spring.mail.username=${EMAIL_LOGIN}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.host=smtp-mail.outlook.com
+spring.mail.properties.mail.store.protocol=pop3
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smpt.auth=true
+
 
