--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_LOGIN}
 spring.datasource.password=${DB_PASSWORD}
 spring.session.store-type=redis
+spring.jpa.open-in-view=false
 spring.redis.host=${REDIS_HOST}
 spring.redis.port=${REDIS_PORT}
 server.servlet.session.timeout=100d
