--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=true
 server.port=${SERVER_PORT}
 server.servlet.context-path=/prism/v1
 springdoc.swagger-ui.path=/api-ui
