--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 spring.jpa.generate-ddl=true
 server.port=${SERVER_PORT}
 server.servlet.context-path=/prism/v1
@@ -17,5 +18,6 @@ spring.mail.host=smtp-mail.outlook.com
 spring.mail.properties.mail.store.protocol=pop3
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smpt.auth=true
-
-
+management.endpoints.web.exposure.include=health, prometheus
+metrics.export.prometheus.enabled=true
+metrics.distribution.percentiles-histogram."[http.server.requests]"=true
