Fix too long confirmation code

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=${SERVER_PORT}
 server.servlet.context-path=/prism/v1
 springdoc.swagger-ui.path=/api-ui
 springdoc.api-docs.path=/api-doc
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_LOGIN}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${POSTGRES_URL}
+spring.datasource.username=${POSTGRES_USERNAME}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.session.store-type=redis
 spring.jpa.open-in-view=false
 spring.redis.host=${REDIS_HOST}
