Add profile online status
Добавлено подключение через websocket. При подключении и отключении статус онлайн меняется.

--- a/Backend/Messenger/src/main/resources/application.properties
+++ b/Backend/Messenger/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8080
 springdoc.swagger-ui.path=/api-ui
 springdoc.api-docs.path=/api-doc
 spring.session.store-type=redis
-spring.redis.host=${REDIS_HOST}
-spring.redis.port=${REDIS_PORT}
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
 management.endpoints.web.exposure.include=health, prometheus
 metrics.export.prometheus.enabled=true
 metrics.distribution.percentiles-histogram."[http.server.requests]"=true
