Add creating groups and chats feature

--- a/Backend/Authentication/src/main/resources/application.properties
+++ b/Backend/Authentication/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.session.store-type=redis
 spring.jpa.open-in-view=false
-spring.redis.host=${REDIS_HOST}
-spring.redis.port=${REDIS_PORT}
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
 server.servlet.session.timeout=100d
 spring.mail.username=${EMAIL_LOGIN}
 spring.mail.password=${EMAIL_PASSWORD}
