--- a/Backend/Messenger/src/main/resources/application.properties
+++ b/Backend/Messenger/src/main/resources/application.properties
@@ -21,3 +21,7 @@ spring.rabbitmq.addresses=${RABBITMQ_DEFAULT_URL}
 spring.rabbitmq.exchange=prism.messenger.exchange
 spring.rabbitmq.queue=prism.messenger.queue
 spring.rabbitmq.routing-key=prism.routing.key
+spring.data.mongodb.uri=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@localhost:27017/
+spring.data.mongodb.database=${MONGO_INITDB_DATABASE}
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
