--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -43,6 +43,7 @@
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-import": "^2.29.1",
     "postcss": "^8.4.39",
     "prettier": "^3.3.3",
