--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,12 +23,14 @@
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-input-mask": "^3.0.5",
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.1.7",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
@@ -43,8 +45,8 @@
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "5.2.1",
     "postcss": "^8.4.39",
     "prettier": "^3.3.3",
     "sass": "^1.77.8",
